--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mirrorge Player Telemetry</title>
+    <title>Player Telemetry</title>
     <style>
         body {
             margin: 0;
@@ -92,6 +92,7 @@
     <div id="popup" class="popup">
         <h2>Device Info</h2>
         <div id="deviceInfo"></div>
+    <button id="saveLogButton">Save Log</button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script>
     <script src="script.js"></script>
