--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
     </div>
     <div id="informations" class="information">
-        <div id="status">Connecting to MQTT broker...</div>
-        <h2 id="coordinates">Connected Players: 0</h2>
+        <div id="status">管理サーバーに接続中...</div>
+        <h2 id="coordinates">接続中デバイス: 0</h2>
         <div>
             <button id="saveLogAllButton" class="info">Save All Log</button>
         </div>
